app/assets/stylesheets/layout.css.scss
body {
  font-size: $base-font-size;
  line-height: $base-line-height;
  font-family: $base-font-family;
  color: $font-color; 
  background: #f0efe7 url(/images/bg/body.jpg);
}

// windows chrome makes a mess of Adelle web font
.windows.chrome body *,
.windows.ie8 body * {
  font-family: $base-font-family-fallback ! important;
}

// High level structure
.inner {
  @include clearfix;
  position: relative;
  width: $page-width;
  margin: 0 auto;
  overflow: visible;
}

#content-wrapper {
  @include clearfix;
}

aside {
  width: 218px;
  float: left;
}

#content {
  width: 702px;
  float: right;
}

#main {
  background-color: #fcfcfa;
  border: solid 1px #e2e0d8;
  @include border-radius(5px);
  padding: 22px;

  .two-column {
    @include clearfix;
    .column-left {
      width: 47%;
      float: left;
    }
    .column-right {
      width: 47%;
      float: right;
    }
  }
  .callout {
    background-color: $callout-color;
    @include border-radius(3px);  
    padding: 8px 14px 4px 14px;
    margin-bottom: 1.4em;
    p {
      margin-bottom: 0;
    }
  }
}

#masthead {
  height: 295px;
  margin-top: -20px;
  margin-bottom: 2em;
  background: #f4f4f1 url(/images/bg/isometric-grid.png) 0 0 repeat-x;
  .inner {
    padding-top: 36px;
    p {
      width: 558px;
      font-size: 18px;
      line-height: $base-line-height * 1.2;
      margin-bottom: 1.2em;
    }
    img.illustration {
      position: absolute;
      right: -30px;
      top: 24px;
    }
  }
}

// Header
header {
  margin-top: 14px;
  position: relative;
  padding-bottom: 26px;
  #tagline {
    display: block;
    position: absolute;
    top: 11px;
    left: 120px;
    margin-top: 1px;
    color: $light-font-color;
    font-size: 24px;
    line-height: 24px;
    em {
      letter-spacing: 1px;
    }
  }
}

// Navigation
aside nav ul {
  list-style: none;
  font-size: 16px;
  font-weight: bold;
  margin-left: 0;
  margin-bottom: 1.4em;
  li {
    margin-bottom: 0.5em;
    a {
      display: block;
      color: #413932;
      &.active, &:hover {
        color: $orange; 
      }
    }
    ul {
      display: none;
      margin-top: 0.3em;
      margin-left: 20px;
      font-weight: normal;
      font-size: 13px;
      li {
        margin-bottom: 0;
        a.active {
          font-weight: bold;
        }
      }
      &.expanded {
        display: block;
      }
    }
  }
}

.bottom-nav {
  @extend .callout;
  @include clearfix;
  margin-top: 2em;
  font-weight: bold;
  .previous {
    float: left;
  }
  .next {
    float: right;
  }
}

section.about {
  display: none;
  &.current {
    display: block;
  }
}

p.center {
  text-align: center;
}

#logo-license {
  @extend .callout;
  margin-top: 2em;
  padding: 20px ! important;
  p {
    color: $light-font-color;
    font-size: 12px;
    line-height: 1.4;
  }
  p + p {
    margin-top: 14px;
  }
  img {
    float: left;
    margin-right: 20px;
  }
}

.callout.downloading {
  background: $callout-color url(/images/icons/download.png) 24px 24px no-repeat;
  padding: 20px 30px 20px 100px !important;
  h3 {
    font-size: 18px;
    color: $orange;
  }
  p {
    font-size: 15px;
    line-height: 1.3em;
    margin-bottom: 15px ! important;
  }
  p.small {
    font-size: 12px;
    color: $light-font-color;
    line-height: 1.4;
    margin-bottom: 0 ! important;
  }
}

// Dropdowns
a.dropdown-trigger {
  padding: 4px 5px;
  border: solid 1px transparent;
  &.active {
    position: relative;
    z-index: 200;
    background-color: #fff ! important;
    @include border-top-left-radius(3px);
    @include border-top-right-radius(3px);
    border: solid 1px darken($base-border-color, 8%);
    border-bottom: none;
  }
}

.dropdown-panel {
  display: none;
  background-color: #fff;
  border: solid 1px darken($base-border-color, 8%);
  position: absolute;
  z-index: 199;
  @include border-radius(3px);
  @include box-shadow(0 1px 2px #ccc);
  &.left {
    @include border-top-left-radius(0);
  }
  &.right {
    @include border-top-right-radius(0);
  }
}

// Footer
footer {
  clear: both;
  @include clearfix;
  margin-top: 35px;
  border-top: solid 1px $base-border-color;
  padding: 20px 0 40px 0;
  color: $light-font-color;
  font-size: 12px;
  line-height: $base-line-height * 0.7; 
  a {
    color: darken($light-font-color, 35%);
    &:hover {
      color: darken($light-font-color, 55%);
    }
  }
  .site-source {
    float: left;
    background: transparent url(/images/icons/code.png) 0 2px no-repeat;
    padding-left: 46px;
  }
  .sfc-member {
    float: right;
    text-align: right; 
  }
}

table.benchmarks {
  width: 100%;
  padding: 20px;
  margin-bottom: 20px;
  tr {
    th.right {
      text-align: center;
    }
    td.desc {
      font-size: 0.8em;
      color: #888;
    }
    td.number {
      text-align: right;
      font-family:monospace;
    }
    td {
     padding: 0 10px;
    }
  }
}

